--- a/app/index.html
+++ b/app/index.html
@@ -71,8 +71,79 @@
   </header>
 
   <main class="main">
-    
+    <section class="top-slider">
+      <div class="container top-slider__container">
+        <div class="top-slider__inner">
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">
+                New Season <br>
+                New Brand Collection
+              </h3>
+              <p class="top-slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top-slider__link" href="#">
+                BUY NOW
+              </a>
+            </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slide images">
+          </div>
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">
+                New Season <br>
+                New Brand Collection
+              </h3>
+              <p class="top-slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top-slider__link" href="#">
+                BUY NOW
+              </a>
+            </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slide images">
+          </div>
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">
+                New Season <br>
+                New Brand Collection
+              </h3>
+              <p class="top-slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top-slider__link" href="#">
+                BUY NOW
+              </a>
+            </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slide images">
+          </div>
+          <div class="top-slider__item">
+            <div class="top-slider__content">
+              <h3 class="top-slider__title">
+                New Season <br>
+                New Brand Collection
+              </h3>
+              <p class="top-slider__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                et dolore magna aliqua. Ipsum.
+              </p>
+              <a class="top-slider__link" href="#">
+                BUY NOW
+              </a>
+            </div>
+            <img class="top-slider__img" src="images/slider/photo.png" alt="slide images">
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+
+
 
   <footer class="footer">
     <div class="container">
@@ -218,7 +289,8 @@
             Subscribe Our NewsLetter
           </h6>
           <p class="footer__top-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+            labore et
             dolore magna aliqua. Quis ipsum suspendisse ultrices gravida.
           </p>
           <form class="footer__top-form" action="#">
