--- a/app/login.html
+++ b/app/login.html
@@ -94,6 +94,36 @@
         </div>
       </div>
     </section>
+
+    <section class="modal">
+      <div class="container">
+        <div class="modal__links">
+          <a class="modal__link" href="#">
+            REGISTER
+          </a>
+          <a class="modal__link modal__link--active" href="#">
+            LOGIN
+          </a>
+        </div>
+        <form class="modal__form" action="#">
+          <label class="modal__label" for="login">
+            Username or email address*
+            <input class="modal__input" type="text" name="login" required>
+          </label>
+          <label class="modal__label" for="password">
+            Password*
+            <input class="modal__input" type="password" name="password" required>
+          </label>
+          <label class="modal__label" for="rememberme">
+            <input type="checkbox" name="rememberme">
+            Remember me
+          </label>
+          <button class="modal__btn" type="submit">LOG IN</button>
+          <a class="modal__error" href="#">Lost your password?</a>
+        </form>
+      </div>
+    </section>
+
   </main>
 
   <footer class="footer">
