--- a/app/shop.html
+++ b/app/shop.html
@@ -99,7 +99,6 @@
       <div class="container">
         <div class="shop__inner">
           <div class="shop__filters filter">
-
             <div class="filter-search filter__item">
               <h3 class="filter__title">
                 Search
@@ -110,9 +109,18 @@
                   <img src="images/icons/search-white.svg" alt="search images">
                 </button>
               </form>
-
             </div>
-
+          </div>
+          <div class="filters__item filter-price">
+            <h3 class="filter__title">
+              Price Filter
+            </h3>
+            <form class="filter-price__form" action="#">
+              <input class="filter-price__input" type="text">
+              <button class="filter-price__btn" type="submit">
+                Filter
+              </button>
+            </form>
           </div>
           <div class="shop__content">
 
